--- a/deploy/deployment/openshift/combined.yaml
+++ b/deploy/deployment/openshift/combined.yaml
@@ -4977,8 +4977,8 @@ spec:
                           description: External devfile registries configuration.
                           properties:
                             url:
-                              description: The public UR of the devfile registry that
-                                serves sample ready-to-use devfiles.
+                              description: The public URL of the devfile registry
+                                that serves sample ready-to-use devfiles.
                               type: string
                           type: object
                         type: array
