--- a/olm-catalog/stable/channel.yaml
+++ b/olm-catalog/stable/channel.yaml
@@ -99,3 +99,5 @@ entries:
     replaces: eclipse-che.v7.94.0
   - name: eclipse-che.v7.96.0
     replaces: eclipse-che.v7.95.0
+  - name: eclipse-che.v7.97.0
+    replaces: eclipse-che.v7.96.0
