ci: Add new 7.98.0 bundle to a catalog
Signed-off-by: Mykhailo Kuznietsov <mkuznets@redhat.com>

--- a/olm-catalog/stable/channel.yaml
+++ b/olm-catalog/stable/channel.yaml
@@ -101,3 +101,5 @@ entries:
     replaces: eclipse-che.v7.95.0
   - name: eclipse-che.v7.97.0
     replaces: eclipse-che.v7.96.0
+  - name: eclipse-che.v7.98.0
+    replaces: eclipse-che.v7.97.0
