--- a/.github/workflows/minikube-test-operator.yaml
+++ b/.github/workflows/minikube-test-operator.yaml
@@ -43,5 +43,5 @@ jobs:
     - uses: actions/upload-artifact@v4
       if: ${{ always() }}
       with:
-        name: artifacts
+        name: artifacts-${{env.arch}}
         path: /tmp/artifacts-che
