fix: release-next-catalog-and-operator-image.yaml
Signed-off-by: Anatolii Bazko <abazko@redhat.com>

--- a/.github/workflows/release-next-catalog-and-operator-image.yaml
+++ b/.github/workflows/release-next-catalog-and-operator-image.yaml
@@ -108,7 +108,7 @@ jobs:
 
   build-catalog-with-digest:
     runs-on: ubuntu-22.04
-    needs: build-operator-image
+    needs: publish-operator-manifest
     steps:
       - name: Checkout source code
         uses: actions/checkout@v3
