ci: Add new 7.99.0 bundle to a catalog
Signed-off-by: Mykhailo Kuznietsov <mkuznets@redhat.com>

--- a/olm-catalog/stable/channel.yaml
+++ b/olm-catalog/stable/channel.yaml
@@ -103,3 +103,5 @@ entries:
     replaces: eclipse-che.v7.96.0
   - name: eclipse-che.v7.98.0
     replaces: eclipse-che.v7.97.0
+  - name: eclipse-che.v7.99.0
+    replaces: eclipse-che.v7.98.0
